--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "antd": "^5.26.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "keen-slider": "^6.8.6",
