--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "antd": "^5.26.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
@@ -33,5 +35,18 @@
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aysumaharramovaa/altinyildizclassics.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aysumaharramovaa/altinyildizclassics/issues"
+  },
+  "homepage": "https://github.com/aysumaharramovaa/altinyildizclassics#readme"
 }
